--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 .wrapper {
   box-sizing: border-box;
-  max-width: 500px;
+  max-width: 600px;
   color: #fff;
   padding: 100px 30px 0;
   margin-left: auto;
@@ -105,9 +105,10 @@ body {
 .start-timer:before,
 .start-timer:after {
   content: '';
-  margin-top: -10px;
+  transform: translateY(-50%);
   position: absolute;
   top: 50%;
+  transition: .3s;
 }
 
 .start-timer:before {
@@ -127,4 +128,14 @@ body {
   height: 20px;
   background-color: #fff;
   border: 0;
+}
+
+.task-actions {
+  margin-bottom: 15px;
+}
+
+.remove-logs {
+  font-size: 16px;
+  text-decoration: none;
+  color: red;
 }
