fix mode transition

--- a/assets/sass/components/_mode.scss
+++ b/assets/sass/components/_mode.scss
@@ -27,7 +27,7 @@
     position: absolute;
     top: 2px;
     left: 2px;
-    transition: transform 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
   }
 
   &:before {
