--- a/assets/sass/layout/_global.scss
+++ b/assets/sass/layout/_global.scss
@@ -4,7 +4,7 @@ body {
   font-size: 16px;
   color: var(--fg-color);
   margin: 0;
-  transition: all 0.3s;
+  transition: all 0.6s ease-in-out;
 }
 
 .wrapper {
