--- a/assets/sass/layout/_global.scss
+++ b/assets/sass/layout/_global.scss
@@ -49,5 +49,5 @@ button, input {
   font-weight: 300;
   text-align: center;
   margin-bottom: 50px;
-  // // text-shadow: 5px 5px 0 var(--color-grey);
+  // text-shadow: 5px 5px 0 var(--color-grey);
 }
