--- a/assets/sass/components/_task-list.scss
+++ b/assets/sass/components/_task-list.scss
@@ -8,8 +8,12 @@
     padding: 30px;
     border-radius: 6px;
     margin-top: 25px;
-    border: 2px solid var(--color-grey);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, .1);
+    position: relative;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .05);
+
+    &:not(.showMore) .remove-logs {
+      display: none;
+    }
   }
 
   &-itemContent {
@@ -31,9 +35,13 @@
   }
 
   &-itemLogs {
-    display: flex;
+    display: none;
     flex-direction: column-reverse;
     margin-bottom: 0;
+
+    .showMore & {
+      display: flex;
+    }
   }
 
   &-itemLog {
@@ -47,8 +55,33 @@
     flex-direction: column;
     align-items: center;
   }
+
+  &-showMore {
+    display: block;
+    width: 100%;
+    font-size: 0;
+    text-align: center;
+    border-top: 1px solid var(--bg-color);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    &:hover {
+      background-color: var(--bg-color);
+    }
+  }
 }
 
 .long, .diff {
   display: none;
+}
+
+.dots {
+  display: inline-block;
+  vertical-align: middle;
+  background-color: var(--color-grey);
+  width: 6px;
+  height: 6px;
+  border-radius: 3px;
+  margin: 6px 3px;
 }
