fix start-timer button

--- a/assets/sass/components/_start-timer.scss
+++ b/assets/sass/components/_start-timer.scss
@@ -5,7 +5,7 @@
   font-size: 0;
   border: 2px solid var(--color-grey);
   border-radius: 25px;
-  margin-bottom: 15px;
+  margin-left: 30px;
   position: relative;
   box-sizing: border-box;
 
